--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:e2e": "vue-cli-service test:e2e",
+    "upload": "gulp",
+    "upload_test": "gulp --test"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -41,6 +43,8 @@
     "@vue/test-utils": "^1.0.0-beta.10",
     "chai": "^4.1.2",
     "eslint-plugin-cypress": "^2.0.1",
+    "gulp": "^4.0.2",
+    "gulp-ssh": "^0.7.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lint-staged": "^6.0.0",
