--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "cropperjs": "^1.2.2",
     "dayjs": "^1.7.7",
     "echarts": "^4.0.4",
+    "element-react": "^1.4.34",
+    "element-theme-default": "^1.4.13",
+    "element-ui": "^2.13.0",
     "html2canvas": "^1.0.0-alpha.12",
     "iview": "^3.2.2",
     "iview-area": "^1.5.17",
